--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="title">
           <h2><span>make a booking</span></h2>
           <div class="text-block">
-            <p>Request a booking by filling out <a href="https://notionforms.io/forms/booking-form-1"> this form</a>. <br> <br> We'll be in touch to confirm availability and delivery details. </p>
+            <p>Request a booking by filling out <a href="https://notionforms.io/forms/booking-form-1" target="_blank"> this form</a>. <br> <br> We'll be in touch to confirm availability and delivery details. </p>
           </div>
           <!-- <iframe id="booking-iframe" src="https://notionforms.io/forms/booking-form-1" scrolling="auto" /> -->
           <!-- <p class="text">
