minor text update

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="title">
           <h2><span>make a booking</span></h2>
           <div class="text-block">
-            <p>Request a booking by filling out <a href="https://notionforms.io/forms/booking-form-1" target="_blank"> this form</a>. <br> <br> We'll be in touch to confirm availability and delivery details. </p>
+            <p>Request a booking by filling out <a href="https://notionforms.io/forms/booking-form-1" target="_blank"> this form</a> 📝. <br> <br> We'll be in touch to confirm availability and delivery details. </p>
           </div>
           <!-- <iframe id="booking-iframe" src="https://notionforms.io/forms/booking-form-1" scrolling="auto" /> -->
           <!-- <p class="text">
@@ -189,9 +189,9 @@
           <h2><span>contact us</span></h2>
           <div class="text-block">
           <p class="text">
-            If you want to get in touch you can contact us at <a href="mailto:potabout@gmail.com">potabout@gmail.com</a>. We are keen to hear your ideas on how we can better connect with and serve creatives and the community.<br><br>
+            If you want to get in touch you can contact us at <a href="mailto:potabout@gmail.com">potabout@gmail.com</a>. We are keen to hear your ideas on how we can better connect with and serve creatives and the community 💡<br><br>
 
-            We are always on the hunt for more pottery wheels. If you know someone who might be willing to sell or donate their old wheel, we'd love to hear from you.
+            We are always on the hunt for more pottery wheels. If you know someone who might be willing to sell or donate their old wheel, we'd love to hear from you 🙏
           </p> <br>
           <!-- We are also on <a href="">fb</a> and <a href="">insta</a>  -->
         </div>
