--- a/index.html
+++ b/index.html
@@ -26,28 +26,29 @@
     <header class="header">
       <nav class="navbar">
         <div class="container">
+          
+
+          <div class="navbar-collapse">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="#about" class="nav-link"><span>about</span></a>
+              </li>
+              <li class="nav-item">
+                <a href="#pricing" class="nav-link"><span>pricing</span></a>
+              </li>
+              <li class="nav-item">
+                <a href="#booking" class="nav-link"><span>booking</span></a>
+              </li>
+              <li class="nav-item">
+                <a href="#contact" class="nav-link"><span>contact</span></a>
+              </li>
+            </ul>
+          </div>
           <div class="brand-and-toggler">
             <a href="index.html" class="navbar-brand">pot about</a>
             <button type="button" class="navbar-toggler" id="navbar-toggler">
               <i class="fas fa-bars"></i>
             </button>
-          </div>
-
-          <div class="navbar-collapse">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a href="#about" class="nav-link">about</a>
-              </li>
-              <li class="nav-item">
-                <a href="#pricing" class="nav-link">pricing</a>
-              </li>
-              <li class="nav-item">
-                <a href="#booking" class="nav-link">booking</a>
-              </li>
-              <li class="nav-item">
-                <a href="#contact" class="nav-link">contact</a>
-              </li>
-            </ul>
           </div>
         </div>
       </nav>
