navbar broken again

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <a href="#booking" class="nav-link"><span>booking</span></a>
           </li>
           <li class="nav-item">
+            <a href="#faq" class="nav-link"><span>faq</span></a>
+          </li>
+          <li class="nav-item">
             <a href="#contact" class="nav-link"><span>contact</span></a>
           </li>
         </ul>
@@ -179,6 +182,70 @@
       </div>
     </section>
     <!-- end of booking section -->
+
+    <!-- faq section -->
+    <section class="faq-container" id="faq-container">
+      <!-- <div class="container">
+        <div class="row">
+          <div class="faq-item">
+            <h2><span>what's it all about?</span></h2>
+            <div class="line"></div>
+            <div class="text-block"><p class="text">
+              Bring the ceramic studio vibe home with you. Practice between classes, learn at your own pace or spice up date night 	
+              &#127801; <br><br> Currently, we can only deliver within 15km of Coburg &#128666;
+
+            </p>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="faq-one">
+        <!-- faq question -->
+        <h1 class="faq-page">What is an FAQ Page?</h1>
+
+        <!-- faq answer -->
+        <div class="faq-body">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                aperiam.
+                Perspiciatis, porro!</p>
+        </div>
+      </div>
+      <hr class="hr-line">
+
+      <div class="faq-two">
+
+          <!-- faq question -->
+          <h1 class="faq-page">Why do you need an FAQ page?</h1>
+
+          <!-- faq answer -->
+
+          <div class="faq-body">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                  necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                  aperiam.
+                  Perspiciatis, porro!</p>
+          </div>
+      </div>
+      <hr class="hr-line">
+
+
+      <div class="faq-three">
+
+          <!-- faq question -->
+          <h1 class="faq-page">Does it improves the user experience of a website?</h1>
+
+          <!-- faq answer -->
+          <div class="faq-body">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit saepe sequi, illum facere
+                  necessitatibus cum aliquam id illo omnis maxime, totam soluta voluptate amet ut sit ipsum
+                  aperiam.
+                  Perspiciatis, porro!</p>
+          </div>
+      </div>
+    </section>
+    <!-- end faq section -->
 
     <!-- contact section -->
     <section class="contact" id="contact">
