few changes to container & faq to fix width issues
also tidied up the container widths thing i was talkng about - will call you

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         </ul>
       </div>
 
-      <div class="hero-div centre container">
+      <section class="hero-div centre container">
         <!-- logo animation -->
         <h1>pot about</h1>
         <p>pottery wheel rental at home 🏠</p>
         <!-- <div class="hero-btns">
           <button type="button" class="btn-book-now">book now</button>
         </div> -->
-      </div>
+      </section>
     </header>
     <!-- end of header -->
 
