fixed navbar glitch

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <p>
               We want everyone to be able to enjoy some hands on fun. That's why there is a sliding scale of price to match your income. Just choose what price you want 🙃 
               <br><br>
-              💸 waged (full price, listed below) // 🌻 community (half price) // 🌈 therapy (free!)
+              💸 waged (full price, listed below) // 🌻 concession (half price) // 🌈 community (free!)
 <!--               
               <ul>
                 <li>💸 waged (full price, listed below)</li>
